back/2.deploy-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-app
  template:
    metadata:
      labels:
        app: back-app
    spec:
      containers:
      - name: boot-con
        image: na2na8/quiz02-back:1.0 ## 여기
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
