back/3.service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: delivery
spec:
  type: ClusterIP
  selector:
    app: back-app
  ports:
  - port: 10000
    targetPort: 10000
